--- a/index.html
+++ b/index.html
@@ -1,1 +1,124 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Fuar mercado de alimentos</title>
+  <!-- Agregar estilos y scripts necesarios aquí -->
+</head>
+<body>
+    <!-- Barra de navegación fija en la parte superior -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+      <a class="navbar-brand" href="#">Mi e-commerce</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="#carousel">Inicio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#congelados">Congelados</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#refrigerados-veganos">Refrigerados Veganos</a>
+          <li>
+            <a class="nav-link" href="#refrigerados-tradicionales">Refrigerados Tradicionales</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#snacks">Snacks</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#sin-tacc">Sin TACC</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#sin-sal">Sin Sal</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+  <!-- Primera sección con carrusel de imágenes -->
+  <section id="carousel">
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+      <ol class="carousel-indicators">
+        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+      </ol>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="imagen1.jpg" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="imagen2.jpg" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="imagen3.jpg" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="imagen4.jpg" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+        <img src="imagen5.jpg" class="d-block w-100" alt="...">
+        </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+        </a>
+    </div>
+        
+   </section>
+          <!-- Segunda sección con secciones de venta de e-commerce -->
+          <section id="ventas">
+            <div id="congelados">
+              <h2>Congelados</h2>
+              <!-- Contenido de la sección de congelados aquí -->
+            </div>
+            <div id="refrigerados-veganos">
+              <h2>Refrigerados Veganos</h2>
+              <!-- Contenido de la sección de refrigerados veganos aquí -->
+            </div>
+            <div id="refrigerados-tradicionales">
+              <h2>Refrigerados Tradicionales</h2>
+              <!-- Contenido de la sección de refrigerados tradicionales aquí -->
+            </div>
+            <div id="snacks">
+              <h2>Snacks</h2>
+            </div>
+            <div id="sin-tacc">
+                <h2>Sin TACC</h2>
+                <!-- Contenido de la sección de productos sin TACC aquí -->
+            </div>
+            <div id="sin-sal">
+              <h2>Sin Sal</h2>
+                <!-- Contenido de la sección de productos sin sal aquí -->
+            </div>
+    </section>
+                <!-- Tercer sección con el pie de página -->
+    <footer>
+                  <div id="redes-sociales">
+                    <a href="#">Facebook</a>
+                    <a href="#">Instagram</a>
+                    <a href="#">Twitter</a>
+                  </div>
+                  <div id="enlaces">
+                    <a href="#carousel">Inicio</a>
+                    <a href="#congelados">Congelados</a>
+                    <a href="#refrigerados-veganos">Refrigerados Veganos</a>
+                    <a href="#refrigerados-tradicionales">Refrigerados Tradicionales</a>
+                    <a href="#snacks">Snacks</a>
+                    <a href="#sin-tacc">Sin TACC</a>
+                    <a href="#sin-sal">Sin Sal</a>
+                  </div>
+    </footer>
+</body>
+</html>
